melhorias de acessibilidade

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,59 +12,104 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 
 <div class="wrapper row-dark-gray">
-  <footer id="footer" class="hoc clear"> 
-    
+  <footer id="footer" class="hoc clear">
     <div class="one_half first">
       <h6 class="heading">Contato</h6>
-      <ul class="nospace linklist contact">        
-        <li><i class="fa fa-map-marker"></i>
+      <ul class="nospace linklist contact">
+        <li>
+          <i aria-hidden="true" class="fa fa-map-marker"></i>
           <address>
-            UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br>
+            UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br />
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa/PR
           </address>
-        </li>        
-        <li><i class="fa fa-envelope-o"></i> contato.protut@gmail.com</li>
-        <li><i class="fa fa-whatsapp"></i> (42) 9 9935-1244 (Andressa)</li>
-        <li><i class="fa fa-whatsapp"></i> (46) 9 9900-8220 (Eliabe)</li>
+        </li>
+        <li>
+          <i aria-hidden="true" class="fa fa-envelope-o"></i>
+          contato.protut@gmail.com
+        </li>
+        <li>
+          <i aria-hidden="true" class="fa fa-whatsapp"></i> (42) 9 9935-1244
+          (Andressa)
+        </li>
+        <li>
+          <i aria-hidden="true" class="fa fa-whatsapp"></i> (46) 9 9900-8220
+          (Eliabe)
+        </li>
         <li></li>
       </ul>
       <div id="contact-btn-container">
-		<a class="btn-rounded hover-zoom" href="./contato.html">Mandar mensagem online &raquo;</a>
+        <a class="btn-rounded hover-zoom" href="./contato.html"
+          >Mandar mensagem online &raquo;</a
+        >
       </div>
     </div>
-    
+
     <div class="one_half">
       <h6 class="heading">Nossas redes sociais</h6>
-      <ul class="clear" style="list-style:none;">
+      <ul class="clear" style="list-style: none">
         <li>
-          <a class="btn-social btn-facebook" href="https://www.facebook.com/protutempresajunior" target="_blank">
-            <span><i class="fa fa-facebook"></i>&nbsp; Facebook</span>
+          <a
+            class="btn-social btn-facebook"
+            href="https://www.facebook.com/protutempresajunior"
+            target="_blank"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-facebook"></i>&nbsp;
+              Facebook</span
+            >
           </a>
-		    </li>
+        </li>
         <li>
-          <a class="btn-social btn-instagram" href="https://www.instagram.com/protutjr" target="_blank">
-            <span><i class="fa fa-instagram"></i>&nbsp; Instagram</span>
+          <a
+            class="btn-social btn-instagram"
+            href="https://www.instagram.com/protutjr"
+            target="_blank"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-instagram"></i>&nbsp;
+              Instagram</span
+            >
           </a>
-		    </li>
+        </li>
         <li>
-          <a class="btn-social btn-linkedin" href="https://www.linkedin.com/company/protut" target="_blank">
-            <span><i class="fa fa-linkedin"></i>&nbsp; LinkedIn</span>
+          <a
+            class="btn-social btn-linkedin"
+            href="https://www.linkedin.com/company/protut"
+            target="_blank"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-linkedin"></i>&nbsp;
+              LinkedIn</span
+            >
           </a>
-		    </li>
+        </li>
         <!--li>
           <a class="btn-social btn-blog" href="https://protutjr.blogspot.com" target="_blank">
             <span><i class="fa fa-newspaper-o"></i>&nbsp; Blog</span>
           </a>
 		</li-->
-      </ul>     
+      </ul>
     </div>
   </footer>
 </div>
 
 <div class="wrapper row-footer">
   <div id="copyright" class="hoc clear">
-    <p class="fl_left">Copyright &copy; <span id="year">2022</span> - Todos os direitos reservados - <a href="./index.html">Protut Soluções em Energia</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
+    <p class="fl_left">
+      Copyright &copy; <span id="year">2022</span> - Todos os direitos
+      reservados - <a href="./index.html">Protut Soluções em Energia</a>
+    </p>
+    <p class="fl_right">
+      Template by
+      <a
+        target="_blank"
+        href="https://www.os-templates.com/"
+        title="Free Website Templates"
+        >OS Templates</a
+      >
+    </p>
+    <script>
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
   </div>
 </div>
