melhorias de acessibilidade

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,98 +12,181 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 
 <div class="wrapper row-dark-gray">
-  <footer id="footer" class="hoc clear"> 
-    
+  <footer id="footer" class="hoc clear">
     <div class="one_half first">
       <h6 class="heading">Contato</h6>
-      <ul id="contact-footer" class="nospace linklist contact">        
-        <li><i class="fa fa-map-marker"></i>
+      <ul id="contact-footer" class="nospace linklist contact">
+        <li>
+          <i aria-hidden="true" class="fa fa-map-marker"></i>
           <address>
-            UTFPR campus Ponta Grossa - Bloco A - piso inferior.<br>
+            UTFPR campus Ponta Grossa - Bloco A - piso inferior.<br />
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa/PR
           </address>
-        </li>        
-        <li><i class="fa fa-envelope-o"></i> <span>contato.</span>protut<span>@gmail.com</span></li>
-        <!-- Links de contato dos membros no WhatsApp -->		
+        </li>
+        <li>
+          <i aria-hidden="true" class="fa fa-envelope-o"></i>
+          <span>contato.</span>protut<span>@gmail.com</span>
+        </li>
+        <!-- Links de contato dos membros no WhatsApp -->
       </ul>
       <div id="contact-btn-container">
-		<a class="btn-rounded hover-zoom" href="./contato.html">Mandar mensagem online &raquo;</a>
+        <a class="btn-rounded hover-zoom" href="./contato.html"
+          >Mandar mensagem online &raquo;</a
+        >
       </div>
     </div>
-    
+
     <div class="one_half">
       <h6 class="heading">Nossas redes sociais</h6>
-      <ul class="clear" style="list-style:none;">
+      <ul class="clear" style="list-style: none">
         <li>
-          <a class="btn-social btn-facebook" href="https://www.facebook.com/protutjr" target="_blank">
-            <span><i class="fa fa-facebook"></i>&nbsp; Facebook</span>
+          <a
+            class="btn-social btn-facebook"
+            href="https://www.facebook.com/protutjr"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-facebook"></i>&nbsp;
+              Facebook</span
+            >
           </a>
-		    </li>
+        </li>
         <li>
-          <a class="btn-social btn-instagram" href="https://www.instagram.com/protutjr" target="_blank">
-            <span><i class="fa fa-instagram"></i>&nbsp; Instagram</span>
+          <a
+            class="btn-social btn-instagram"
+            href="https://www.instagram.com/protutjr"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-instagram"></i>&nbsp;
+              Instagram</span
+            >
           </a>
-		    </li>
+        </li>
         <li>
-          <a class="btn-social btn-linkedin" href="https://www.linkedin.com/company/protut" target="_blank">
-            <span><i class="fa fa-linkedin"></i>&nbsp; LinkedIn</span>
+          <a
+            class="btn-social btn-linkedin"
+            href="https://www.linkedin.com/company/protut"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <span
+              ><i aria-hidden="true" class="fa fa-linkedin"></i>&nbsp;
+              LinkedIn</span
+            >
           </a>
-		    </li>
-      </ul>     
+        </li>
+      </ul>
     </div>
   </footer>
 </div>
 
 <div class="wrapper row-footer">
   <div id="copyright" class="hoc clear">
-    <p class="fl_left">Copyright &copy; <span id="year">2023</span> ― Todos os direitos reservados ― <a href="./index.html">Protut - Elétrica e Automação</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
-  </div>  
+    <p class="fl_left">
+      Copyright &copy; <span id="year">2023</span> ― Todos os direitos
+      reservados ― <a href="./index.html">Protut - Elétrica e Automação</a>
+    </p>
+    <p class="fl_right">
+      Template by
+      <a
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://www.os-templates.com/"
+        title="Free Website Templates"
+        >OS Templates</a
+      >
+    </p>
+    <script>
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
+  </div>
 </div>
 
-<div id="contact-float" style="position: fixed; bottom: 20px; right: 20px; z-index: 100; display: none;">
-	<button id="contact-float-btn" class="btn-orange" formsappId="6738041482617bff1d19e790"><i class="fa fa-envelope-o fa-2x"></i></button>
-	<span class="center">Enviar mensagem</span>
+<div
+  id="contact-float"
+  style="
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100;
+    display: none;
+  "
+>
+  <button
+    id="contact-float-btn"
+    class="btn-orange"
+    type="button"
+    formsappId="6738041482617bff1d19e790"
+    aria-label="Abrir formulário de contato"
+  >
+    <i aria-hidden="true" class="fa fa-envelope-o fa-2x"></i>
+  </button>
+  <span class="center">Enviar mensagem</span>
 </div>
 
-<div id="cookies" style="position: sticky; bottom: 0px; z-index: 100; background: #F0F0F0; display: none;" class="wrapper row-white">
-	<div class="hoc clear" style="padding: 8px;">
-		<p class="fl_left" style="margin-right: 10px;">Este site utiliza cookies para melhorar a sua experiência de navegação e para estatísticas.</p>  
-		<a class="btn"  style="cursor: pointer; margin-top: 8px;" onclick="allowCookies();">Entendi</a>
-    </div>
+<div
+  id="cookies"
+  style="
+    position: sticky;
+    bottom: 0px;
+    z-index: 100;
+    background: #f0f0f0;
+    display: none;
+  "
+  class="wrapper row-white"
+  role="region"
+  aria-label="Aviso sobre cookies"
+>
+  <div class="hoc clear" style="padding: 8px">
+    <p class="fl_left" style="margin-right: 10px">
+      Este site utiliza cookies para melhorar a sua experiência de navegação e
+      para estatísticas.
+    </p>
+    <button
+      class="btn"
+      type="button"
+      style="cursor: pointer; margin-top: 8px"
+      onclick="allowCookies();"
+    >
+      Entendi
+    </button>
+  </div>
 </div>
 
 <script>
-	if (!getCookie("cookies_allowed")) {
-		document.getElementById("cookies").style.display = "";
-	}
-	
-	function allowCookies() {
-		document.getElementById("cookies").style.display = "none";
-		setCookie("cookies_allowed", "true", 180);		
-	}
-	
-	function setCookie(cname, cvalue, exdays) {
-	  const d = new Date();
-	  d.setTime(d.getTime() + (exdays*24*60*60*1000));
-	  let expires = "expires="+ d.toUTCString();
-	  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/;SameSite=Strict";
-	}
-	
-	function getCookie(cname) {
-	  let name = cname + "=";
-	  let decodedCookie = decodeURIComponent(document.cookie);
-	  let ca = decodedCookie.split(';');
-	  for(let i = 0; i <ca.length; i++) {
-		let c = ca[i];
-		while (c.charAt(0) == ' ') {
-		  c = c.substring(1);
-		}
-		if (c.indexOf(name) == 0) {
-		  return c.substring(name.length, c.length);
-		}
-	  }
-	  return "";
-	}	
+  if (!getCookie("cookies_allowed")) {
+    document.getElementById("cookies").style.display = "";
+  }
+
+  function allowCookies() {
+    document.getElementById("cookies").style.display = "none";
+    setCookie("cookies_allowed", "true", 180);
+  }
+
+  function setCookie(cname, cvalue, exdays) {
+    const d = new Date();
+    d.setTime(d.getTime() + exdays * 24 * 60 * 60 * 1000);
+    let expires = "expires=" + d.toUTCString();
+    document.cookie =
+      cname + "=" + cvalue + ";" + expires + ";path=/;SameSite=Strict";
+  }
+
+  function getCookie(cname) {
+    let name = cname + "=";
+    let decodedCookie = decodeURIComponent(document.cookie);
+    let ca = decodedCookie.split(";");
+    for (let i = 0; i < ca.length; i++) {
+      let c = ca[i];
+      while (c.charAt(0) == " ") {
+        c = c.substring(1);
+      }
+      if (c.indexOf(name) == 0) {
+        return c.substring(name.length, c.length);
+      }
+    }
+    return "";
+  }
 </script>
