--- a/_includes/tags_comuns.html
+++ b/_includes/tags_comuns.html
@@ -2,16 +2,16 @@
 <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- CSS -->
 <link href="{{ "/css/layout.css" | relative_url }}" rel="stylesheet" type="text/css" media="all">
 <link href="{{ "/css/protut.css" | relative_url }}" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
-<!-- FONTES -->   
+<!-- FONTES -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
 <!-- JAVASCRIPT -->
 <script src="{{ "/js/jquery.min.js" | relative_url }}"></script>
@@ -25,7 +25,7 @@
 		let href = window.location.href;
 		if (!href.includes("contato")) {
 			document.getElementById("contact-float").style.display = "";
-			new formsapp('6738041482617bff1d19e790', 'slider', {'button':{'text':'<i class="fa fa-envelope-o fa-2x"></i>','color':'#E43F21'},'width':'767px','height':'100vh','align':'right'}, 'https://zohcl48o.forms.app');
+			new formsapp('6738041482617bff1d19e790', 'slider', {'button':{'text':'<i aria-hidden="true" class="fa fa-envelope-o fa-2x"></i>','color':'#E43F21'},'width':'767px','height':'100vh','align':'right'}, 'https://zohcl48o.forms.app');
 		}
 	}
 </script>
