--- a/css/e404.css
+++ b/css/e404.css
@@ -1,8 +1,36 @@
-#error404 p, #error404 h3, #title {margin: 0;}
-#error404 img {width: 300px; padding: 40px 40px 0px;}
+#error404 p,
+#error404 h3,
+#title {
+  margin: 0;
+}
+#error404 img {
+  width: 300px;
+  padding: 40px 40px 0px;
+}
+.easter-egg-trigger {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+.easter-egg-trigger:focus-visible {
+  outline: 3px solid #0f3d63;
+  outline-offset: 4px;
+}
 
-#text {font-style: italic;}
+#text {
+  font-style: italic;
+}
 
-#quotes {margin: auto; padding: 8px; background: #F3F3F3; border: 1px solid #777777; max-width: 400px;}
+#quotes {
+  margin: auto;
+  padding: 8px;
+  background: #f3f3f3;
+  border: 1px solid #777777;
+  max-width: 400px;
+}
 
-.small-txt {font-size: 10px; color: #777777;}
+.small-txt {
+  font-size: 10px;
+  color: #777777;
+}
